added the Readme text

--- a/EmployeeMicroserviceAPI/appsettings.json
+++ b/EmployeeMicroserviceAPI/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=LAPTOP-GIRK5NQL\\SQLEXPRESS;Database=EmployeeDatabase; User Id=sa;Password=Sana@1995;TrustServerCertificate=True;"
+    "DefaultConnection": "Server=Yourserver;Database=EmployeeDatabase; User Id=sa;PasswordyourpwdTrustServerCertificate=True;"
   },
   "Logging": {
     "LogLevel": {
